name:                panda
version:             3.2
synopsis:            Panda Key Exchange is a implimentation of the Diffie-Hellman key exchange.
description:         Panda Key Exchange uses the Diffie-Hellman key exchange to generate a common passcode between two computers over a unsecured network.
license:             GPL-3
license-file:        LICENSE
author:              Graham Pegg
maintainer:          techpanda@digitalpanda.ca
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.8

executable panda
  main-is: Main.hs
  build-depends:       base ==4.6.*, options ==1.2.*, split ==0.2.*
  hs-source-dirs:      src
