name:                panda
version:             4
synopsis:            Panda Key Exchange is a implimentation of the Diffie-Hellman key exchange.
description:         Panda Key Exchange uses the Diffie-Hellman key exchange to generate a common passcode between two computers over a unsecured network.
license:             GPL-3
license-file:        LICENSE
author:              Graham Pegg
maintainer:          techpanda@digitalpanda.ca
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.8

executable panda
  main-is: Main.hs
  build-depends:       base, options ==1.2.*, split ==0.2.*, HTTP
  hs-source-dirs:      src

Test-Suite checkSimplePrime
  type:           exitcode-stdio-1.0
  main-is:        checkSimplePrime.hs
  hs-source-dirs: src, util/tests
  build-depends:  base, split ==0.2.*

Test-Suite checkComplexPrime
  type:           exitcode-stdio-1.0
  main-is:        checkComplexPrime.hs
  hs-source-dirs: src, util/tests
  build-depends:  base, split ==0.2.*